--- a/task1.html
+++ b/task1.html
@@ -45,9 +45,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="task1.css">
 </head>
 <body>
-    <h2>Login Form</h2>
+    <h2>Coding Club</h2>
     <form action="task1.php" method="POST">
         <label for="username">Username:</label>
         <input type="text" name="username" required><br><br>
